fix infoboxes on mobile

--- a/skins/Citizen/resources/skins.citizen.styles/common/templates.less
+++ b/skins/Citizen/resources/skins.citizen.styles/common/templates.less
@@ -7,7 +7,7 @@
     clear: right;
     margin-left: 1em;
     margin-bottom: 0.5em;
-    min-width: 28em;
+    min-width: 26em;
     max-width: 32em;
     font-size: smaller;
 
